[package]
name = "rustix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
actix-web = "4.0.0-beta.15"
actix-rt = "^2.3"
actix-http = "3.0.0-beta.16"
dotenv = "0.15.0"
sqlx = { version = "0.5.9", features = [ "runtime-actix-rustls", "postgres", "uuid" ] }
serde = "1"

[dev-dependencies]
rstest = "0.12.0"
